--- a/deploy.yml
+++ b/deploy.yml
@@ -1,6 +1,11 @@
 ---
 - hosts: rpi
   tasks:
+    - name: shutdown server
+      service:
+          name: apache2
+          state: stop
+
     - name: remove name_gen/ files
       local_action: command rm -f ./services/name_gen/name_generator/letter.freq
       local_action: command rm -f ./services/name_gen/name_generator/n2a.map
@@ -8,3 +13,7 @@
       copy:
           dest: /var/www/home_server/
           src: ./
+    - name: restart server
+      service:
+          name: apache2
+          state: start
