--- a/configs/prod.conf
+++ b/configs/prod.conf
@@ -1,14 +1,55 @@
 <VirtualHost *:80>
+	servername www.devdaniel.eu
 
 	ServerAdmin djing_djang@hotmail.com
 	DocumentRoot /var/www/home_server
 
 	<Files ~ "\.(php|html)$">
 		Order allow,deny
-		Deny from all
+		Allow from all
 	</Files>
+	<Files ~ "\.yml$">
+		require all denied
+	</Files>
+	<Directory "/var/www/home_server/configs">
+		Order deny,allow
+		Deny from all
+	</Directory>
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+	errordocument 404 /errors/404.php
+	errordocument 500 /errors/500.php
+
+</VirtualHost>
+
+<VirtualHost *:443>
+
+	servername www.devdaniel.eu
+	sslengine on
+	sslcertificatefile "/etc/letsencrypt/live/www.devdaniel.eu/fullchain.pem"
+	sslcertificatekeyfile "/etc/letsencrypt/live/www.devdaniel.eu/privkey.pem"
+
+	ServerAdmin djing_djang@hotmail.com
+	DocumentRoot /var/www/home_server
+
+	<Files ~ "\.(php|html)$">
+		Order allow,deny
+		Allow from all
+	</Files>
+	<Files ~ "\.yml$">
+		require all denied
+	</Files>
+	<Directory "/var/www/home_server/configs">
+		Order deny,allow
+		Deny from all
+	</Directory>
+
+	ErrorLog ${APACHE_LOG_DIR}/error.log
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+	errordocument 404 /errors/404.php
+	errordocument 500 /errors/500.php
 
 </VirtualHost>
