--- a/configs/dev.conf
+++ b/configs/dev.conf
@@ -1,14 +1,34 @@
 <VirtualHost *:80>
+servername localhost
+redirect permanent / https://localhost/
+</VirtualHost>
+
+<VirtualHost *:443>
+
+	servername localhost
+	sslengine on
+	sslcertificatefile "/home/daniel/.ssl/example.crt"
+	sslcertificatekeyfile "/home/daniel/.ssl/example.key"
 
 	ServerAdmin djing_djang@hotmail.com
 	DocumentRoot /var/www/home_server
 
 	<Files ~ "\.(php|html)$">
 		Order allow,deny
-		Deny from all
+		Allow from all
 	</Files>
+	<Files ~ "\.yml$">
+		require all denied
+	</Files>
+	<Directory "/var/www/home_server/configs">
+		Order deny,allow
+		Deny from all
+	</Directory>
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+	errordocument 404 /errors/404.php
+	errordocument 500 /errors/500.php
 
 </VirtualHost>
