Forum and small stuff
- Rewrote forum in Perl and stored it in the database.
- Minor change in books and added .gitignore.
- Updated errors to show a random image.
- Updated style to fit with forum.
- Added services ANN for future project.
- Starting to switch over to perl template toolkit.
- Added script for viewing logs
- Minor change to server config for dev

--- a/configs/dev.conf
+++ b/configs/dev.conf
@@ -13,6 +13,15 @@ redirect permanent / https://localhost/
 	ServerAdmin djing_djang@hotmail.com
 	DocumentRoot /var/www/home_server
 
+	<Files ~ "\.(pl|cgi)$">
+		Addhandler cgi-scropt .cgi 
+		SetHandler perl-script
+		PerlResponseHandler ModPerl::PerlRun
+		Options +ExecCGI
+		PerlSendHeader On
+		Order allow,deny
+		Allow from all
+	</Files>
 	<Files ~ "\.(php|html)$">
 		Order allow,deny
 		Allow from all
