--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@
 /config/master.key
 
 /config/credentials/production.key
+
+# dont need the pile's contents
+publc/the_pile/*
+!public/the_pile/.keep
